<?xml version="1.0"?>
<package format="2">
  <name>leador_imu_uart</name>
  <version>0.0.2</version>
  <description>
    Uart interface to Leador IMU receivers
  </description>

  <license>BSD</license>
  <author email="xujh2013@163.com">fun</author>
  <maintainer email="xujh2013@163.com">fun</maintainer>
  <url type="website">http://www.leador.com.cn</url>
  <url type="repository">http://www.leador.com.cn</url>
  <url type="bugtracker">http://www.leador.com.cn</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>leador_msgs</depend>


  <exec_depend>roslaunch</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
