<?xml version="1.0"?>
<package format="2">
  <name>leador_imu_listener</name>
  <version>0.0.2</version>
  <description>
    Uart interface to Leador IMU receivers
  </description>

  <license>BSD</license>
  <author email="xujh@163.com">fun</author>
  <maintainer email="xujh@163.com">fun</maintainer>
  <url type="website">http://www.leador.com.cn</url>
  <url type="repository">http://www.leador.com.cn</url>
  <url type="bugtracker">http://www.leador.com.cn</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>leador_msgs</depend>


</package>
